--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <!-- starter -->
+    <!-- start -->
     <header>
 
         <div class="container">
@@ -89,6 +89,20 @@
                
             </div>
 
+            <!-- text w big img -->
+
+            <div class="big">
+                <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                <img src="img/item4-big.svg" alt="">
+                <div class="stars">
+                    <h1>Pronto a iniziare la tua avventura?</h1>
+                    <div class="big-download"><a href="">&#10097; &#10095;  Scarica per Windows</a></div>
+                </div>
+
+                
+
+            </div>
 
         </div>
 
