--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -44,7 +46,7 @@
                         <a href="">&#10097; &#10095;  Scarica per Windows</a>
                     </div>
                     <div class="tasto-dr fl">
-                        <a href="">Apri Discord nel tuo browser</a>
+                        <a href="">&#10063; Apri Discord nel tuo browser</a>
                     </div>
                 </div>
                 
